--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <title>Anshu Akansha</title>
 </head>
-<body>
+<body style="background-color:#4ddbff;">
 
 <h1>Hey There</h1>
-<p>I am Anshu Akansha</p>
+<p>I am Anshu Akansha </p>
 
 </body>
 </html>
