--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>Anshu Akansha</title>
 </head>
-<body style="background-color:#4ddbff;">
-
+<!--<body style="background-color:#4ddbff;">-->
+<body style="background-color:powderblue;">
 <h1>Hey There</h1>
 <p>I am Anshu Akansha </p>
 
