--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     </div>
   </div>
   
-  <div class="column">
+  <!--<div class="column">
     <div class="card">
       <h3>Card 3</h3>
       <p>Some text</p>
       <p>Some text</p>
     </div>
-  </div>
+  </div>-->
   
   <div class="column">
     <div class="card">
