--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>I am Anshu Akansha </p>
 <div class="row">
   <div class="column">
-    <div class="card">
+    <div class="card-1">
       <h3>Card 1</h3>
       <p>Some text</p>
       <p>Some text</p>
@@ -21,7 +21,7 @@
   </div>
 
   <div class="column">
-    <div class="card">
+    <div class="card-2">
       <h3>Card 2</h3>
       <p>Some text</p>
       <p>Some text</p>
@@ -29,7 +29,7 @@
   </div>
   
   <div class="column">
-    <div class="card">
+    <div class="card-3">
       <h3>Card 3</h3>
       <p>Some text</p>
       <p>Some text</p>
@@ -37,7 +37,7 @@
   </div>
   
   <div class="column">
-    <div class="card">
+    <div class="card-4">
       <h3>Card 4</h3>
       <p>Some text</p>
       <p>Some text</p>
